# ai-devops

./: .gitignore  README.md  app.py  llm.py  main.py  new.py  pyproject.toml  requirements.txt
